resolve overflow issue in the MessageBox components #4094

--- a/src/Templates/AdminPanel/Bit.AdminPanel/src/Client/Shared/Shared/MessageBox.razor.scss
+++ b/src/Templates/AdminPanel/Bit.AdminPanel/src/Client/Shared/Shared/MessageBox.razor.scss
@@ -21,7 +21,7 @@
     margin: rem(10px) 0;
     white-space: pre;
     overflow: auto;
-    max-width: rem(800px);
+    max-width: 960px;
 }
 
 .footer {
